...
//                         ),
//                         Align(
//                           alignment: Alignment.centerRight,
//                           child: TextButton(
//                             onPressed: () => _showForgotPasswordModal(),
//                             child: Text(
//                               'Forgot Password?',
//                               style: TextStyle(
//                                 color: Colors.pink[800],
//                                 fontWeight: FontWeight.w600,
//                               ),
//                             ),
//                           ),
...
//                         const SizedBox(height: 24),

//                         /// 🔹 **Fingerprint Authentication Button**
//                         ElevatedButton.icon(
//                           onPressed: _handleFingerprintLogin,
//                           icon: const Icon(Icons.fingerprint, size: 24),
//                           label: const Text("Login with Fingerprint"),
//                           style: ElevatedButton.styleFrom(
//                             backgroundColor: Colors.blueGrey[800],
//                             shape: RoundedRectangleBorder(
//                               borderRadius: BorderRadius.circular(12),
//                             ),
//                             padding: const EdgeInsets.symmetric(vertical: 16),
...

//                         const SizedBox(height: 12),

//                         /// 🔹 **Normal Login Button**
//                         ElevatedButton(
//                           onPressed: () {
//                             // if (_emailController.text == 'Sam11@gmail.com' &&
//                             //     _passwordController.text == 'Sam@123') {
//                             if (_formKey.currentState!.validate()) {
//                               context.read<LoginBloc>().add(
//                                     LoginUserEvent(
//                                       email: _emailController.text,
//                                       password: _passwordController.text,
//                                       context: context,
...
//                             ),
//                             padding: const EdgeInsets.symmetric(vertical: 16),
//                             minimumSize: const Size(double.infinity, 50),
//                             elevation: 2,
//                           ),
//                           child: const Text(
//                             'Login',
//                             style: TextStyle(
//                               fontSize: 18,
//                               fontWeight: FontWeight.bold,
//                               color: Colors.white,
//                               fontFamily: 'Brand Bold',
//                             ),
...
//                                   context,
//                                   MaterialPageRoute(
//                                       builder: (context) => const SignUpView()),
//                                 );
//                               },
//                               child: Text(
//                                 'Register',
//                                 style: TextStyle(
//                                   color: Colors.pink[800],
//                                   fontSize: 16,
//                                   fontWeight: FontWeight.bold,
//                                 ),
//                               ),
...
//           padding: const EdgeInsets.all(16.0),
//           child: Column(
//             mainAxisSize: MainAxisSize.min,
//             children: [
//               _buildTextField(
//                 controller: _forgotPasswordController,
//                 label: "Enter email or phone",
//                 icon: Icons.email,
//               ),
//               const SizedBox(height: 16),
//               ElevatedButton(
//                 onPressed: () {
//                   context.read<LoginBloc>().add(
//                         ForgotPasswordRequested(
//                           email: _forgotPasswordController.text,
//                           context: context,
//                         ),
//                       );
//                 },
//                 child: const Text("Send OTP"),
//               ),
//             ],
//           ),
//         );
//       },
//     );
...
//       context
//           .read<LoginBloc>()
//           .add(FingerprintLoginEvent(context: context)); // Trigger BLoC event
//     } else {
//       showMySnackBar(
//         context: context,
//         message: "Fingerprint authentication failed!",
//         color: Colors.red,
//       );
//     }
//   }

//   Widget _buildTextField({
...
